force-app/main/default/objects/CaseFieldMapping__c/CaseFieldMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds field mapping between Salesforce Commerce Cloud Case Object and Service Cloud Case Object. This mapping is used in Rest Apex wrapper class</description>
    <label>CaseFieldMapping</label>
</CustomObject>