force-app/main/default/objects/CaseFieldMapping__c/fields/CC_Attribute__c.field-meta.xml
<CustomField>
    <fullName>CC_Attribute__c</fullName>
    <description>This field holds CC Attribute Name</description>
    <inlineHelpText>This field holds CC Attribute Name</inlineHelpText>
    <label>CC Attribute</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>