force-app/main/default/objects/CaseFieldMapping__c/fields/Enable_Sync__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting check if this attribute will be synchronised from commerce cloud or not</description>
    <inlineHelpText>This setting check if this attribute will be synchronised from commerce cloud or not</inlineHelpText>
    <label>Enable Sync</label>
    <type>Checkbox</type>
</CustomField>