force-app/main/default/objects/CaseFieldMapping__c/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <description>This Field holds mapping between Service Cloud Object Attributes with Commerce Cloud request object attributes</description>
    <inlineHelpText>This Field holds mapping between Service Cloud Object Attributes with Commerce Cloud request object attributes</inlineHelpText>
    <label>Field Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>